Add sales feature with database integration, UI components, and navigation

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,7 +16,7 @@
             app:destination="@id/client_form" />
 
         <action
-            android:id="@+id/action_to_addSale"
+            android:id="@+id/action_from_client_list_to_add_sale"
             app:destination="@id/sale_form" />
     </fragment>
 
