--- a/app/src/main/res/layout/view_client_item.xml
+++ b/app/src/main/res/layout/view_client_item.xml
@@ -54,4 +54,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+    <!-- VIP -->
+    <ImageView
+        android:id="@+id/vip_icon"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/ic_trophy"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/delete_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
